# wiktionle

./: Cargo.toml  LICENSE  README.md  wotd_words.json
.github/workflows/: rust.yml
src/: app.rs  events.rs  scraper.rs  ui.rs  word_list_manager.rs
src/engine/: mod.rs  utils.rs
tests/: integration_tests.rs
tests/common/: mod.rs
third_party_licenses/battleshi-rs/: LICENSE
third_party_licenses/minesweep-rs/: LICENSE
