[package]
name = "wiktionle"
version = "0.1.0"
authors = ["Isaac Rodrigez", "Jeffrey Kotz", "Roy Rodriguez"]
edition = "2024"
description = "A terminal-based clone of wordle using Wiktionary's Word of the Day list."
keywords = ["wiktionle", "wordle", "word", "game"]
license-file = "LICENSE"

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.19"
tui = { version = "0.14", default-features = false, features = ['crossterm'] }
rand = "0.8.0"
serde     = { version = "1",   features = ["derive"] }
serde_json = "1"
reqwest   = { version = "0.11", features = ["blocking"] }
scraper   = "0.17"

[[bin]]
name = "scraper"
path = "src/scraper.rs"